# PocketTRS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  platformio.ini  sdkconfig  sdkconfig.old
bom/v2/: PocketTRS.xlsx
bom/v2.2/: PocketTRS.xlsx
bom/v2.3/: PocketTRS.xlsx
bom/v2.3b/: PocketTRS.xlsx
case/: PocketTRS v2.3b case bottom version 1.stl  Print First - Lid Silver Text Inlay - PocketTRS v2.3b case - version 2.stl  Print Second - Lid Black Inlay - PocketTRS v2.3b case - version 2.stl  Print Third - Lid Main - PocketTRS v2.3b case - version 2.stl  readme.MD
components/fabgl/: component.mk  soundgen.cpp  soundgen.h
components/trs-io/: CMakeLists.txt  component.mk
components/trs-lib/: CMakeLists.txt  form.c  form.h  header.c  window.c
kicad/: PocketTRS-cache.lib  PocketTRS.sch  PocketTRS.sch-bak  sym-lib-table
kicad/v1/: ESP32-WROVER-B.lib  MCP23008-E-P-ND.lib  MCP43X1.lib  PocketTRS-B_Cu.gbr  PocketTRS-B_Mask.gbr  PocketTRS-B_SilkS.gbr  PocketTRS-NPTH.drl  PocketTRS-PTH.drl  PocketTRS-cache.lib  PocketTRS.kicad_pcb  PocketTRS.kicad_pcb-bak  PocketTRS.net  PocketTRS.pro  PocketTRS.sch  PocketTRS.sch-bak  fp-info-cache  sym-lib-table
kicad/v2.1/: ESP32-WROVER-B.lib  MCP23008-E-P-ND.lib  PocketTRS-B_Cu.gbr  PocketTRS-B_Mask.gbr  PocketTRS-B_Paste.gbr  PocketTRS-B_SilkS.gbr  PocketTRS-Edge_Cuts.gbr  PocketTRS-F_Cu.gbr  PocketTRS-F_Mask.gbr  PocketTRS-F_Paste.gbr  PocketTRS-F_SilkS.gbr  PocketTRS-NPTH.drl  PocketTRS-PTH.drl  PocketTRS-cache.lib  PocketTRS.kicad_pcb  PocketTRS.net  PocketTRS.pro  PocketTRS.sch  fp-lib-table  sym-lib-table
kicad/v2.2/: PocketTRS-B_Cu.gbr  (+12 more)
main/: #io.cpp#  CMakeLists.txt  Kconfig  button.cpp  button.h  calibrate.cpp  calibrate.h  cassette.cpp  cassette.h  component.mk  config.h  configure.c  configure.cpp  font.cpp  font.h  grafyx.cpp  grafyx.h  help.c  i2s.cpp  i2s.h  io.cpp  io.h  led.cpp  led.h  main.cpp  screen.cpp  screen.h  settings.cpp  settings.h  sound.cpp  sound.h  spi.cpp  spi.h  splash.cpp  splash.h  status.c  status.cpp  storage.cpp  trs-keyboard.cpp  trs-keyboard.h  (+13 more)
src/: cassette.cpp  cassette.h  config.h  font.cpp  font.h  i2c.cpp  i2c.h  io.cpp  io.h  main.cpp  sound.cpp  sound.h  spi.cpp  spi.h  trs-keyboard.cpp  trs-keyboard.h  trs.cpp  trs.h
tools/: gen-font-glyphs.c
(+103 files in other folders)
